[metadata]
name = pystopwatch
version = attr: pystopwatch.__version__
author = huwns
url = https://github.com/huwns/pystopwatch
author_email = huwnss2@gmail.com
description = GUI StopWatch
long_description = file: README.rst
license = BSD-3-Clause
requires_python = >=3.6
classifier = 
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
