[metadata]
name = pystopwatch
version = attr: pystopwatch.__version__
author = huwns
url = https://pystopwatch.readthedocs.io
author_email = huwnss2@gmail.com
description = GUI StopWatch
long_description = file: README.rst
license = BSD-3-Clause
requires_python = >=3.6
classifier = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
keywords = stopwatch, time, presentation, gui
project_urls =
    Source=https://github.com/huwns/pystopwatch
    Tracker=https://github.com/huwns/pystopwatch/issues

[options]
packages = find:

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    pystopwatch = pystopwatch.__main__:main
